[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
fory = "0.14.1"
rand = "0.9.2"
serde = {version="1.0.228",features=["derive"]}
reqwest={version = "0.13.1", features = ["blocking", "json"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.10"
